# Agentic-RAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: fallback_agent.py  langchain_agent.py
backend/app/api/routers/: chat.py  health.py  knowledge.py  sessions.py
backend/app/config/: settings.py
backend/app/corrective_rag/: __init__.py  service.py
backend/app/kb/: __init__.py  ingestion.py
backend/app/providers/: ai_pipeline.py  embeddings.py  llm.py  web_search.py
backend/app/rerank/: __init__.py  service.py
backend/app/retrieval/: hybrid_search.py  local_store.py  oceanbase_store.py
backend/app/schemas/: chat.py  domain.py  knowledge.py
backend/app/services/: answer_builder.py  chat_service.py  knowledge_service.py  session_service.py
backend/app/utils/: ids.py  json_store.py  text.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agent_service.py  test_corrective_rag.py  test_knowledge_service.py  test_local_knowledge_store.py
frontend/src/: app.js  index.html  styles.css
scripts/: bootstrap_demo_data.py  ingest_nike_10k.py
