[project]
name = "agentic-rag-demo"
version = "0.1.0"
description = "可运行的 Agentic RAG 演示项目，包含 FastAPI 后端与聊天式前端。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-oceanbase>=0.3.1",
    "pyseekdb>=1.0.0b5",
    "langchain-dev-utils>=1.3.0",
    "langchain-openai>=1.1.6",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.7.17",
    "mermaid-python>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
